# rs-conference-scraper

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  conference.rs  main.rs  types.rs
src/cache/: db.rs  mod.rs  schema.sql
src/enrich/: arxiv.rs  crossref.rs  html_scraper.rs  mod.rs  openalex.rs  pdf.rs  site_parsers.rs
src/filter/: category.rs  keyword.rs  llm.rs  mod.rs
src/output/: mod.rs
src/scraper/: mod.rs
src/scraper/aamas/: list.rs  mod.rs  years.rs
src/scraper/acl/: html.rs  mod.rs  paper_page.rs  xml.rs  years.rs
src/scraper/cryptodb/: api.rs  mod.rs
src/scraper/cvf/: abstract_page.rs  list.rs  mod.rs  years.rs
src/scraper/dblp/: api.rs  mod.rs  xml.rs
src/scraper/eprint/: list.rs  mod.rs  paper_page.rs
src/scraper/iclr/: api.rs  mod.rs
src/scraper/icml/: abstract_page.rs  list.rs  mod.rs  volumes.rs
src/scraper/jasss/: detail.rs  list.rs  mod.rs  years.rs
src/scraper/ndss/: list.rs  mod.rs  paper_page.rs  years.rs
src/scraper/neurips/: abstract_page.rs  list.rs  mod.rs  years.rs
src/scraper/openalex/: api.rs  mod.rs
src/scraper/usenix/: list.rs  mod.rs  paper_page.rs  years.rs
src/sync/: mod.rs  progress.rs
