[package]
name = "conf-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
async-trait = "0.1"
roxmltree = "0.20"
csv = "1"
ss-tools = { git = "https://github.com/akitenkrad/rs-ss-tools.git" }
openai-tools = { git = "https://github.com/akitenkrad/rs-openai-tools.git" }
pdf-extract = "0.10"

[dev-dependencies]
tempfile = "3"
